add longestString